# operaton-robot-playground

./: .buildinfo  .devcontainer.json  .gitignore  .treefmt.toml  AGENTS.md  Makefile  README.md  devenv.nix  devenv.yaml  ecosystem.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  template.bpmn
.github/workflows/: build.yml  docs.yml  test.yml
_downloads/0bdf037b4bbd1fd259afb18d03649b3e/: more-boundary-events.bpmn
_downloads/1e4b5ce8e800770cf2507be4d37f95ad/: sequence-flow-annotated.bpmn
_downloads/4096c8797c8a830a103661c239e60a24/: concurrent-paths-doubled.bpmn
_downloads/5c5c1c7f2949c81db2fc3c5eb3c82443/: example-compensation.bpmn
_downloads/5ecc4a64175ac19d6cd487a87d103ac6/: concurrent-paths-locked.bpmn
_downloads/6e62b83c0efb6e1d438e8a58fbaa3626/: simple-flow.bpmn
_downloads/6e6ea996d2dfd91ae1cd53779abc0d8a/: boundary-bpmn-error.bpmn
_downloads/735c6d3eb5bcb194fc3890e9544b74e8/: concurrent-paths-mixed.bpmn
_downloads/8e82dcf9622c0104632fba2a8b0d34cd/: gateways-inclusive-paths.bpmn
_downloads/b231cdc5b6d7224abd57ff822cdacb0c/: sequence-flow-redux.bpmn
_downloads/e08a076cf5d3680a4c611be7f24755aa/: sequence-flow.bpmn
_downloads/e9e9195e3526dd7dd52cfa6eb1f25cee/: embedded-sub-process.bpmn
_sources/: index.md
_sources/bpmn/: index.md
_sources/modeling/: index.md
_sources/operaton/: index.md
bpmn/: advanced.html  index.html  juel.html
devenv/modules/: python.nix  vscode-share.nix
docs/: Makefile  conf.py  ecosystem.md  hello-world.bpmn  index.md
docs/_static/: custom.css  minipres.js
docs/advanced/: index.md  intermediate-events.bpmn  more-start-events.bpmn  multi-instance-subprocess.bpmn
docs/bpmn/: advanced.md  boundary-bpmn-error.bpmn  boundary-event.bpmn  boundary-events.bpmn  business-rule-task.bpmn  call-activity-process.bpmn  call-activity-task.bpmn  concurrent-tokens.bpmn  embedded-subprocess.bpmn  end-event.bpmn  event-based-gateway.bpmn  event-subprocess.bpmn  exclusive-gateway.bpmn  gateways-and-paths.bpmn  gateways-inclusive-paths.bpmn  index.md  intermediate-throw-event.bpmn  interrupting-timer-boundary-event.bpmn  manual-task.bpmn  message-end-event.bpmn  message-intermediate-catch-event.bpmn  message-start-event.bpmn  (+23 more)
examples/: test_most_variables.robot  test_types_roundtrip.robot
examples/compensation-example/: README.md  hello.robot  pyproject.toml
examples/complex-example/: hello.robot  pyproject.toml  testprocess2.bpmn
examples/secrets-example/: .gitignore  .wrapignore  Makefile  README.md  Secrets.py  pyproject.toml  secrets.bpmn  secrets.json.example  secrets.robot  test_secrets.robot
exercises/: template.bpmn
fixture/: pom.xml
forms/: index.html
modeling/: index.html
operaton/: index.html
playground/: index.html
purjo/: index.html
resources/: miranum-modeler.vsix
tests/: index.html
(+44 files in other folders)
