[project]
name = "env"
version = "0.1.0"
description = ""
authors = []
license = {text = "Apache Software License" }
requires-python = ">= 3.9"
dependencies =[
    "requests>=2.32.3",
    "robotframework>=7.1.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true
