[project]
name = "compensation-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "robotframework>=7.2.2",
]

[tool.purjo.topics]
"Simulate SUT" = { name = "Simulate SUT" }
"StimulateSut" = { name = "Simulate SUT" }
"Simulate SUT Teardown" = { name = "Simulate SUT Teardown" }
