[project]
dependencies = [
  "robotframework>=7.2.2",
]
description = "Add your description here"
name = "complex-example"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.purjo.topics]
"StimulateSut" = {name = "Stimulate SUT"}
"ValidateTestData" = {name = "Validate Test Data"}
"Stimulate3rdPartySUT" = {name = "Stimulate 3rd Party SUT"}
"Receive3rdPartySUT" = {name = "Receive 3rd Party SUT"}
